# mobilecore

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: android-release.yml  game-web-pages.yml  google-play-publish.yml
MobileCore-P0-Probe/: README.md
MobileCore-P0-Probe/docs/: p0-execution-plan.md  p0-mobilecode-integration.md  p0-model-test-matrix.md  p0-risk-checklist.md  termux-install-commands.md
MobileCore-P0-Probe/scripts/: benchmark_quick.sh  start_llama_server.sh  termux_p0_env_check.sh  test_openai_compatible_api.sh
android-app/: .gitignore  README.md  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/cpp/: CMakeLists.txt  mobilecore_llama_bridge.cpp
android-app/model-downloads/: catalog.tsv  diffusion-catalog.tsv
android-app/scripts/: bootstrap-llama.sh  create-vision-smoke-fixtures.sh  create_clip_cifar10_fixture.py  download-gguf.sh  google_play_publish.py  qa-device-benchmark.sh
design-assets/: README.md  manifest.json
docs/: mobile-ai-stack.md  mobilecore-api-contract.md  mobilecore-benchmark-plan.md  mobilecore-core-architecture.md  mobilecore-project-plan.md
docs/implementation/: NEXT_CODEX_PROMPT_MOBILECORE_V0_1.md  mobilecore-v0.1-implementation-brief.md
docs/release/: tuima-0.1.3-rc2.md  tuima-ios-inference-qa.md
docs/store/: google-play-data-safety.md  google-play-listing-zh-CN.md  google-play-publish.json  (+1 more)
game/: README.md
game-web/: README.md  index.html  package-lock.json  package.json
ios-app/: README.md
tests/: mobilecore-api-smoke-test.md
(+105 files in other folders)
